fixed the screen-wipe that was displaying on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,7 +73,7 @@ section h3.title {
 	background:rgb(0, 0, 0);
 	position: fixed;
 	z-index: 1000;
-	top: -100%;
+	top: -110%;
 }
 .screen-wipe-bottom{
 	width: 100%;
@@ -81,7 +81,7 @@ section h3.title {
 	background:rgb(0, 0, 0);
 	position: fixed;
 	z-index: 1000;
-	bottom: -100%;
+	bottom: -110%;
 }
 /*Header Styles*/
 
